@@ -1,3 +1,11 @@
+2010-01-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ia64.h (ia64_find_opcode): Remove argument name.
+	(ia64_find_next_opcode): Likewise.
+	(ia64_dis_opcode): Likewise.
+	(ia64_free_opcode): Likewise.
+	(ia64_find_dependency): Likewise.
+
 2009-11-22  Doug Evans  <dje@sebabeach.org>
 
 	* cgen.h: Include bfd_stdint.h.
